<resources>
    <string name="app_name">Task Manager</string>
    <string name="light_theme">LIGHT</string>
    <string name="dark_theme">DARK</string>
    <string name="rus">RUSSIAN</string>
    <string name="eng">ENGLISH</string>
    <string name="settings">Settings</string>
    <string name="back" translatable="false"><![CDATA[<]]></string>
    <string name="forward" translatable="false"><![CDATA[>]]></string>
    <string name="taskMan" translatable="false">TASK MANAGER</string>
    <string name="lang" >Language</string>
    <string name="theme">Theme</string>
    <string name="not" >Notifications</string>
    <string name="enter">Enter a task</string>
    <string name="start">START</string>
    <string name="timer" translatable="false">00:00</string>
    <string name="delete">DELETE</string>
    <string name="stop">STOP TIMER</string>
    <string name="enterTime">Enter time in seconds</string>
    <string name="addTask">ADD TASK</string>
    <string name="deleteAll">DELETE ALL TASKS</string>
    <string name="nameTask">Task name</string>
    <string name="description">Task description</string>
    <string name="tasks">Tasks</string>
    <string name="startApp">Start application</string>
    <string name ="albert">Strive not for success, but for the values that it gives \nAlbert Einstein</string>
</resources>