<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Название задачи -->
    <EditText
        android:id="@+id/taskTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameTask" />

    <!-- Описание задачи -->
    <EditText
        android:id="@+id/taskDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <!-- Дата задачи -->
    <DatePicker
        android:id="@+id/taskDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <!-- Кнопка добавления задачи -->
    <Button
        android:id="@+id/addTaskDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTask" />

</LinearLayout>