<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Заголовок "Задачи" -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tasks"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp" />

    <!-- Список задач -->
    <ListView
        android:id="@+id/taskListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Кнопка добавления задачи -->
    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTask" />

    <!-- Кнопка удаления всех задач -->
    <Button
        android:id="@+id/deleteAllTasksButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteAll" />

</LinearLayout>